@@ -20,6 +20,8 @@
 #include "toolcontext.h"
 #include "segtype.h"
 #include "defaults.h"
+#include <math.h>  /* fabs() */
+#include <float.h> /* DBL_EPSILON */
 
 #define SIZE_BUF 128
 
@@ -41,6 +43,12 @@ static const struct {
 
 static const int _num_policies = sizeof(_policies) / sizeof(*_policies);
 
+/* Test if the doubles are close enough to be considered equal */
+static int _close_enough(double d1, double d2)
+{
+	return fabs(d1 - d2) < DBL_EPSILON;
+}
+
 uint64_t units_to_bytes(const char *units, char *unit_type)
 {
 	char *ptr = NULL;
@@ -53,7 +61,7 @@ uint64_t units_to_bytes(const char *units, char *unit_type)
 		if (ptr == units)
 			return 0;
 		v = (uint64_t) strtoull(units, NULL, 10);
-		if ((double) v == custom_value)
+		if (_close_enough((double) v, custom_value))
 			custom_value = 0;	/* Use integer arithmetic */
 		units = ptr;
 	} else
@@ -126,10 +134,10 @@ uint64_t units_to_bytes(const char *units, char *unit_type)
 		return 0;
 	}
 
-	if (custom_value)
-		return (uint64_t) (custom_value * multiplier);
+	if (_close_enough(custom_value, 0.))
+		return v * multiplier; /* Use integer arithmetic */
 	else
-		return v * multiplier;
+		return (uint64_t) (custom_value * multiplier);
 }
 
 char alloc_policy_char(alloc_policy_t alloc)
